fixed TransactionDeclined exception, adding missing card_code, fixed encoding issue, and updated to use getConstructor() pattern versus the deprecated cls.newInstance() method